# task-manager

./: .gitignore  README.md  meson.build  meson_options.txt
include/mp/taskmgr/: config_resolver.hpp  plugin_registry.hpp  plugin_resolve.hpp  task_manager.hpp
schemas/: plugin_manifest.schema.json  task_envelope.schema.json  task_result.schema.json
scripts/: contract-test.sh
src/task-manager/: client.cpp  config_resolver.cpp  main.cpp  plugin_registry.cpp  plugin_resolve.cpp  task_manager.cpp  zmq_client.cpp
subprojects/: satellite-plugin-sdk.wrap
subprojects/packagefiles/libzmq/: meson.build  platform.hpp
