project('libzmq', 'c', 'cpp', version: '4.3.5', license: 'MPL-2.0', default_options: ['cpp_std=c++11', 'warning_level=1'])

thread_dep = dependency('threads')

src_files = files(
  'src/address.cpp',
  'src/channel.cpp',
  'src/client.cpp',
  'src/clock.cpp',
  'src/ctx.cpp',
  'src/curve_client.cpp',
  'src/curve_mechanism_base.cpp',
  'src/curve_server.cpp',
  'src/dealer.cpp',
  'src/decoder_allocators.cpp',
  'src/devpoll.cpp',
  'src/dgram.cpp',
  'src/dish.cpp',
  'src/dist.cpp',
  'src/endpoint.cpp',
  'src/epoll.cpp',
  'src/err.cpp',
  'src/fq.cpp',
  'src/gather.cpp',
  'src/io_object.cpp',
  'src/io_thread.cpp',
  'src/ip.cpp',
  'src/ip_resolver.cpp',
  'src/ipc_address.cpp',
  'src/ipc_connecter.cpp',
  'src/ipc_listener.cpp',
  'src/kqueue.cpp',
  'src/lb.cpp',
  'src/mailbox.cpp',
  'src/mailbox_safe.cpp',
  'src/mechanism.cpp',
  'src/mechanism_base.cpp',
  'src/metadata.cpp',
  'src/msg.cpp',
  'src/mtrie.cpp',
  'src/norm_engine.cpp',
  'src/null_mechanism.cpp',
  'src/object.cpp',
  'src/options.cpp',
  'src/own.cpp',
  'src/pair.cpp',
  'src/peer.cpp',
  'src/pgm_receiver.cpp',
  'src/pgm_sender.cpp',
  'src/pgm_socket.cpp',
  'src/pipe.cpp',
  'src/plain_client.cpp',
  'src/plain_server.cpp',
  'src/poll.cpp',
  'src/poller_base.cpp',
  'src/polling_util.cpp',
  'src/pollset.cpp',
  'src/precompiled.cpp',
  'src/proxy.cpp',
  'src/pub.cpp',
  'src/pull.cpp',
  'src/push.cpp',
  'src/radio.cpp',
  'src/radix_tree.cpp',
  'src/random.cpp',
  'src/raw_decoder.cpp',
  'src/raw_encoder.cpp',
  'src/raw_engine.cpp',
  'src/reaper.cpp',
  'src/rep.cpp',
  'src/req.cpp',
  'src/router.cpp',
  'src/scatter.cpp',
  'src/select.cpp',
  'src/server.cpp',
  'src/session_base.cpp',
  'src/signaler.cpp',
  'src/socket_base.cpp',
  'src/socket_poller.cpp',
  'src/socks.cpp',
  'src/socks_connecter.cpp',
  'src/stream.cpp',
  'src/stream_connecter_base.cpp',
  'src/stream_engine_base.cpp',
  'src/stream_listener_base.cpp',
  'src/sub.cpp',
  'src/tcp.cpp',
  'src/tcp_address.cpp',
  'src/tcp_connecter.cpp',
  'src/tcp_listener.cpp',
  'src/thread.cpp',
  'src/timers.cpp',
  'src/trie.cpp',
  'src/udp_address.cpp',
  'src/udp_engine.cpp',
  'src/v1_decoder.cpp',
  'src/v1_encoder.cpp',
  'src/v2_decoder.cpp',
  'src/v2_encoder.cpp',
  'src/v3_1_encoder.cpp',
  'src/vmci.cpp',
  'src/vmci_address.cpp',
  'src/vmci_connecter.cpp',
  'src/vmci_listener.cpp',
  'src/ws_address.cpp',
  'src/xpub.cpp',
  'src/xsub.cpp',
  'src/zap_client.cpp',
  'src/zmq.cpp',
  'src/zmq_utils.cpp',
  'src/zmtp_engine.cpp',
  'external/sha1/sha1.c',
)

inc_dirs = include_directories('include', 'src', '.')

libzmq_lib = static_library(
  'zmq',
  src_files,
  include_directories: inc_dirs,
  dependencies: [thread_dep],
  cpp_args: ['-DZMQ_STATIC'],
  c_args: ['-DZMQ_STATIC'],
  install: false,
)

libzmq_dep = declare_dependency(
  include_directories: inc_dirs,
  link_with: libzmq_lib,
  compile_args: ['-DZMQ_STATIC'],
  dependencies: [thread_dep],
)

meson.override_dependency('libzmq', libzmq_dep)
